--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "expenser-2.0",
+  "homepage": "http://Ujjal-das21.github.io/Expenser-App", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
